fixed card spacing

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -3,5 +3,5 @@
   margin: 0;
   font-size: 16px;
   text-align: center;
-  padding: 60px 0 60px;
+  padding: 60px 0;
 }
